--- a/Spin.html
+++ b/Spin.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css">
 <body>
-
+<p> Thanks for your Invitation. MS. </p>
 <div class="loader-wrapper">
     <div class="loader"></div>
     <div class="loader-inner"></div>
